# Ominicall

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
backend-signaling/: requirements.txt
backend-signaling/app/: main.py  manager.py
config/: ice_config.json
examples/app-to-app-demo/: main.py
examples/web-to-web-demo/: index.html
omnicall_sdk.egg-info/: PKG-INFO  SOURCES.txt
sdk_core/: __init__.py
sdk_core/common/: constants.js
sdk_core/python_app/: __init__.py  core.py  health.py  signaling.py
sdk_core/web/: core.js  monitor.js  recovery.js  signaling.js
