[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ominicall"
version = "0.1.3"
description = "A lightweight, headless WebRTC-based communication SDK for 1-on-1 voice calls"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Vamshidhar Reddy Gorre", email = "your-email@example.com"}
]
keywords = ["webrtc", "communication", "voice-call", "sdk", "headless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "websockets>=10.0",
    "aiortc>=1.3.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/ominicall"
"Bug Tracker" = "https://github.com/yourusername/ominicall/issues"
"Documentation" = "https://github.com/yourusername/ominicall#readme"
"Source" = "https://github.com/yourusername/ominicall"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["sdk_core", "sdk_core.*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
